<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/main_menu_item1"
        android:orderInCategory="100"
        android:onClick="ActivityPressure_openFromMenu"
        android:title="@string/button_calc_pressure"/>
    <item
        android:id="@+id/main_menu_item2"
        android:orderInCategory="100"
        android:onClick="ActivityWeight_openFromMenu"
        android:title="@string/button_ind_body"/>
    <item
        android:id="@+id/main_menu_item3"
        android:orderInCategory="100"
        android:onClick="exitFromApp"
        android:title="@string/button_exit"/>
</menu>