<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityPressure">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10">
            <TextView
                android:id="@+id/textView"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_input" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_weight="20"
            android:weightSum="5"
            app:layout_constraintTop_toTopOf="parent">
            <EditText
                android:layout_weight="4"
                android:id="@+id/editAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:hint="@string/text_input_age"
                />
        </TableRow>
        <TableRow
            android:weightSum="5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="20">
            <EditText
                android:id="@+id/editWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:hint="@string/text_input_weight"
                android:maxLength="10" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="20"
            android:weightSum="2"
            android:background="#92BAB9"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/title_ps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_ps" />
            <TextView
                android:id="@+id/res_ps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-" />
        </TableRow>
        <TableRow
            android:layout_weight="20"
            android:background="#bcf1f0"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:id="@+id/title_pd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_pd" />
            <TextView
                android:id="@+id/res_pd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">
            <Button
                android:id="@+id/button_calc"
                android:onClick="calculateBP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_cal_bp" />
            <Button
                android:id="@+id/button_main_activity"
                android:onClick="backMainActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_goback" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>