<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityWeight">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10">
            <TextView
                android:id="@+id/textView"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_input" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_weight="20"
            app:layout_constraintTop_toTopOf="parent">
            <EditText
                android:id="@+id/editAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/text_input_age"
                android:maxLength="10" />
        </TableRow>
        <TableRow
            android:weightSum="5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="20">
            <EditText
                android:layout_weight="1"
                android:hint="@string/text_input_height"
                android:id="@+id/editHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="10"
                />
        </TableRow>
        <TableRow
            android:weightSum="5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="20">
            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radioMale"
                    android:drawableRight="@mipmap/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_male" />
                <RadioButton
                    android:id="@+id/radioFemale"
                    android:drawableRight="@mipmap/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_female" />
            </RadioGroup>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/gender" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="20"
            android:weightSum="2"
            android:background="#C6ED99"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/normal_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal_weight" />
            <TextView
                android:id="@+id/res_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="100"
            android:layout_gravity="center">
            <Button
                android:id="@+id/button_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="calculateWeight"
                android:text="@string/button_cal_bp" />
            <Button
                android:id="@+id/button_main_activity2"
                android:onClick="backtoMainActivity"
                android:layout_weight="50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_goback" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>